--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/index.js",
-    "dev": "ts-node-dev src/index.ts",
+    "start": "node dist/server.js",
+    "dev": "ts-node-dev src/server.ts",
     "test": "jest"
   },
   "keywords": [],
